web/modules/custom/ilr_effects/css/image_effects.css
/* Zoom-out effect */
.ilr-effect-image.zoom-out .cu-image {
  transform: scale(1.1, 1.1);
  transition: transform 1.5s ease-in-out;

  @media (prefers-reduced-motion: reduce) {
    transform: scale(1, 1);
  }
}

.ilr-effect-image.zoom-out.js--in-frame .cu-image {
  transform: scale(1, 1);
}

/* Curtain reveal effect */
.ilr-effect-image.curtain-reveal {
  position: relative;
}

.ilr-effect-image.curtain-reveal .cu-image {
  opacity: 0;
}

.ilr-effect-image.curtain-reveal.js--in-frame::before {
  content: '';
  display: block;
  width: 100vw;
  height: 100vh;
  background-image: var(--ilr-effects-img);
  background-size: cover;
  background-position: center;
  position: fixed;
  top: 0;
  z-index: -1;
}

.ilr-effect-image.curtain-reveal.js--in-frame::after {
  content: '';
  display: block;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  margin-top: -100vh;
  background: white;
  z-index: 1;
}

.ilr-effect-image.curtain-reveal.js--in-frame .media__caption {
  position: relative;
}

.ilr-effect-image.curtain-reveal.js--in-frame .media__caption::before
  {
  content: ' ';
  display: block;
  width: 100vw;
  height: 120vh;
  position: absolute;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
  margin-top: -0.5em;
  background: white;
  z-index: -1;
}

/* tmp */
.paragraph--type--rich-text {
  background: white;
}

